# tfcgi

./: Doxyfile  README.md  TUTORIAL.md  meson.build
examples/stats/: demo.sh  lighttpd.conf.in  main.cpp  meson.build  stats.cpp
examples/stats/include/: fcgi-stats.hpp
examples/stats/static/: index.html
examples/tutorial/: .gitignore  lighttpd.conf.in  main.cpp  meson.build
include/: fcgi.hpp
include/fcgi/: iostream.hpp  limits.hpp  name-value-pairs.hpp  protocol.hpp  request.hpp  stats.hpp
src/: connection.cpp  connection.hpp  iostream.cpp  iostream.hpp  ipacket.cpp  ipacket.hpp  main.cpp  name-value-pairs.cpp  request-workers.cpp  request-workers.hpp  request.cpp  stats.cpp  stats.hpp
